log
Thu 16 May 2024 03:41:20 PM UTC: 
 tests:  0|5
total_score: 0/70
455cebe
Thu 16 May 2024 04:02:31 PM UTC: 
 sudoku.c | 32 ++++++++++++++++++--------------
 1 file changed, 18 insertions(+), 14 deletions(-)
 tests:  2|4
total_score: 15/70
ba4c201
Thu 16 May 2024 04:21:49 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
38009e6
Thu 16 May 2024 04:21:56 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
35670c5
Thu 16 May 2024 04:23:44 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:4: error: expected expression before ‘}’ token
   49 |    }
      |    ^
sudoku.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
16fa903
Thu 16 May 2024 09:08:39 PM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
bd5942a
Thu 16 May 2024 09:22:15 PM UTC: 
 sudoku.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  2|4
total_score: 15/70
aa5afcf
Thu 16 May 2024 09:23:50 PM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 15/70
047a5bc
Thu 16 May 2024 09:24:13 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
cfbdeac
Thu 16 May 2024 09:25:59 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
6f4780f
